--- a/index.html
+++ b/index.html
@@ -58,5 +58,22 @@
         </div>
       </div>
     </section>
+    
+    <section class="section3">
+      <div>
+        <p class="p"><em>this is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</em\</p>
+        <p class="p2">-Thor, god of thunder</p>
+      </div>
+    </section>
+    
+    <section class="section4">
+        <p class="section4-p"><span class="section4-span">Call to action! its time!</span><br />Sign up for your profuct by clicking that button right over there!</p>
+        <form action="" method="get" accept-charset="utf-8">
+          <button type="submit"><span>Sign up</span></button>
+        </form>
+    </section>
+    <footer>
+      <p>copirigh que se yo</p>
+    </footer>
   </body>
 </html>
